fix: bh on ios

--- a/css/custom.css
+++ b/css/custom.css
@@ -7,6 +7,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-attachment: scroll;
 }
 
 .container {
